# fullstack-todo-app

./: README.md
.github/workflows/: api_actions.yaml
api/: .gitignore  README.md  pyproject.toml
api/src/app/: main.py
api/src/app/core/: config.py
api/src/app/domain/enums/: todo_enums.py
api/src/app/domain/models/: todo_model.py
api/src/app/entrypoints/: todo_router.py
api/src/app/entrypoints/message/: todo_message.py
api/src/app/service/: todo_service.py
api/src/tests/: conftest.py  utils.py
api/src/tests/e2e/: test_todo_app.py
api/src/tests/integration/entrypoints/: test_todo_router.py
api/src/tests/unit/entrypoints/: test_unit_todo_router.py
api/src/tests/unit/service/: test_todo_service.py
e2e/: package.json
fe/: package.json
