[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["yuya-okada527 <yuya.okada527@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
sqlmodel = "^0.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests = "^2.26.0"
pytest-cov = "^2.12.1"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
